tests/transpiler/x/scala/pure_fold.scala
// Generated by Mochi v0.10.31 on 2025-07-20 02:17:57 GMT+7
object Main extends App {
  def triple(x) = {
    (x * 3)
  }

  println(triple((1 + 2)))
}
